<resources>
    <string name="guild_title">My Free Company</string>
    <string name="guild_photo_title">Free Company photo</string>
    <string name="guild_back">Back</string>
    <string name="guild_refresh">Refresh</string>
    <string name="guild_retry">Retry</string>
    <string name="guild_more">Load more</string>
    <string name="guild_close">Close</string>
    <string name="guild_none">You have not joined a Free Company.</string>
    <string name="guild_auth_required">Connect the current Rising Stones account to read Free Company content.</string>
    <string name="guild_unavailable">Free Company reading is unavailable for this account.</string>
    <string name="guild_load_failed">Free Company content could not be loaded.</string>
    <string name="guild_section_profile">Profile</string>
    <string name="guild_section_members">Members</string>
    <string name="guild_section_activities">Activity</string>
    <string name="guild_section_photos">Photos</string>
...
    <string name="guild_housing_public">Show housing information</string>
    <string name="guild_housing_hidden">Hide housing information</string>
    <string name="guild_save_housing">Save housing visibility</string>
    <string name="guild_save_labels">Save labels</string>
    <string name="guild_save_weekday">Save weekday time</string>
    <string name="guild_save_weekend">Save weekend time</string>
    <string name="guild_save_description">Save description</string>
    <string name="guild_start_hour">Start hour</string>
    <string name="guild_end_hour">End hour</string>
    <string name="guild_crop_avatar">Crop profile image</string>
    <string name="guild_crop_avatar_hint">Drag or pinch the image to adjust the square crop.</string>
    <string name="guild_confirm_crop">Use crop</string>
    <string name="guild_cancel">Cancel</string>
    <string name="guild_upload_photos">Add photos</string>
    <string name="guild_album_upload_title">Upload photos</string>
    <string name="guild_album_selected_count">%1$d photos selected</string>
    <string name="guild_album_upload_progress">Uploaded %1$d of %2$d</string>
    <string name="guild_upload">Upload</string>
    <string name="guild_discard_draft">Discard draft</string>
    <string name="guild_like">Like</string>
    <string name="guild_unlike">Unlike</string>
    <string name="guild_write_comment">Write comment</string>
    <string name="guild_reply">Reply</string>
    <string name="guild_comment_image">Comment image</string>
    <string name="guild_remove_image">Remove image</string>
    <string name="guild_send_comment">Send</string>
    <string name="guild_keep_draft">Close and keep draft</string>
    <string name="guild_delete">Delete</string>
    <string name="guild_delete_comment_title">Delete comment?</string>
    <string name="guild_delete_comment_message">This comment will be deleted after you confirm.</string>
    <string name="guild_delete_photo_title">Delete photo?</string>
    <string name="guild_delete_photo_message">This photo will be deleted after you confirm.</string>
    <string name="guild_image_error_title">Image unavailable</string>
...
